# training-server

./: .dockerignore  .env.coolify.example  .env.example  COPY_MANIFEST.md  DEPLOY.md  Dockerfile  Dockerfile.admin  Dockerfile.api  README.md  alembic.ini  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
scripts/: kickoff_training_job.py  prepare_gpu_training.sh  promote_models.py  register_artifacts.sql  run_training.sh
src/: run_mps_training.py
src/admin/: app.py
src/admin/components/: charts.py
src/admin/pages/: 1_dashboard.py  2_datasets.py  3_training.py  4_models.py  5_backtest.py  6_monitoring.py  7_settings.py
src/api/: auth.py  deps.py  main.py
src/api/routes/: data.py  health.py  models.py  training.py
src/backtest/: funding_simulator.py  perp_engine.py  replay_clock.py  synthetic_scenarios.py
src/backtest/indicators/: __init__.py  numba_indicators.py
src/backtest/monte_carlo/: __init__.py  numba_mc.py  perturbation.py
src/calibration/: __init__.py  bias_calibrator.py  latency.py  paper_fill.py  regime_calibrator.py  survivorship_model.py
src/coldpath/: __init__.py  main.py  publishing.py  storage.py  storage_backend.py  storage_postgres.py  supervisor.py
src/coldpath/ai/: __init__.py  approval_workflow.py  automated_allocation_agent.py  claude_client.py  claude_router.py  cost_tracker.py  drift_detector.py  fingpt_client.py  glm_model_selector.py  interaction_analyzer.py  kv_cache_manager.py  llm_orchestrator.py  ml_enhancement_agent.py  model_version_lock.py  multi_objective_optimizer.py  ollama_client.py  parameter_store.py  parameter_tools.py  parameter_tracker.py  performance_engine.py  proactive_alerts.py  prompt_optimizer.py  resource_guard.py  rollback_manager.py  rollout_controller.py  safety_validator.py  server_tuner.py  strategy_orchestrator.py  task_complexity_router.py  trade_explainer.py  vllm_server.py
src/coldpath/analysis/: __init__.py  funding_analysis.py  semantic_fragmentation.py
src/coldpath/announcement/: __init__.py  classifier.py  extractor.py  scorer.py  service.py  verifier.py
src/coldpath/api/: __init__.py  server.py
src/coldpath/artifacts/: __init__.py  model_store.py
src/coldpath/autotrader/: __init__.py  adaptive_limits.py  autonomous_mode.py  coordinator.py  monitoring.py  operation_modes.py  training_integration.py  validation_pipeline.py
src/coldpath/backtest/: __init__.py  ai_backtest_guide.py  auto_backtest.py  daily_optimizer.py  data_provider.py  dune_provider.py  engine.py  ensemble_optimizer.py  fill_simulator.py  funding_simulator.py  genetic_optimizer.py  market_regime.py  metrics.py  mev_replay.py  mev_slippage.py  monte_carlo.py  order_book_sim.py  out_of_sample_validator.py  pareto_optimizer.py  perp_engine.py  profit_config.py  replay_clock.py  rl_optimizer.py  rl_tuner.py  robustness_validator.py  smart_orchestrator.py  stress_test_engine.py  synthetic_scenarios.py  unified_optimizer.py  vectorized.py  walk_forward.py
src/coldpath/calibration/: __init__.py  bias_calibrator.py  latency.py  paper_fill.py  regime_calibrator.py  survivorship_model.py
src/coldpath/cli/: __init__.py  doctor.py
src/coldpath/config/: __init__.py  daily_pnl_monitor.py  mac_optimized.py  verified_settings.py
src/coldpath/core/: __init__.py  connection_pool.py  health_monitor.py  memory_monitor.py  resource_registry.py  sync_checkpoint.py  task_queue.py
src/coldpath/data/: __init__.py  collector.py
src/coldpath/data_acquisition/: __init__.py  free_datasets.py
src/coldpath/distillation/: __init__.py  artifact_exporter.py  pipeline_orchestrator.py  student_distiller.py  teacher_trainer.py
src/coldpath/execution/: __init__.py  market_impact.py
src/coldpath/experiments/: __init__.py  ab_testing.py
src/coldpath/export/: __init__.py  onnx_export.py
src/coldpath/features/: __init__.py  graph_features.py  order_flow_features.py
src/coldpath/inference/: __init__.py  pipeline.py
src/coldpath/ipc/: __init__.py  coldpath_pb2.py  coldpath_pb2_grpc.py  coldpath_servicer.py  hotpath_client.py  hotpath_pb2.py  hotpath_pb2_grpc.py
src/coldpath/learning/: __init__.py  advanced_regime.py  announcement_learner.py  ensemble.py  feature_engineering.py  feedback_loop.py  lstm_predictor.py  model_updater.py  mutual_information.py  online_learner.py  outcome_tracker.py  profitability_learner.py  proposal_ranker.py  regime_detector.py  signal_generator.py  social_provider.py  stacking_ensemble.py  time_series_transformer.py  training_data_sync.py
src/coldpath/metrics/: __init__.py  alpha_decay.py
src/coldpath/ml_tools/: __init__.py  free_ml_tools.py
src/coldpath/models/: __init__.py  ml_trade_context.py
src/coldpath/onchain/: __init__.py  whale_tracker.py
src/coldpath/optimization/: __init__.py  resource_guard.py
src/coldpath/params/: __init__.py  versioned_store.py
src/coldpath/pipeline/: nightly_quant.py
src/coldpath/portfolio/: __init__.py  correlation_limits.py  multi_strategy.py  spatial_pricing.py
src/coldpath/publishing/: __init__.py  model_publisher.py  param_pusher.py
src/coldpath/security/: __init__.py  secure_pickle.py
src/coldpath/services/: __init__.py  ab_testing.py  feature_service_server.py  (+4 more)
src/db/: models.py  session.py
src/distillation/: artifact_exporter.py  student_distiller.py  teacher_trainer.py
src/ipc/: __init__.py  coldpath_pb2.py  coldpath_pb2_grpc.py  hotpath_client.py
src/learning/: advanced_regime.py  ensemble.py  feature_engineering.py  lstm_predictor.py  mutual_information.py  online_learner.py  outcome_tracker.py  profitability_learner.py  proposal_ranker.py
src/training/: __init__.py  anti_overfit.py  bandit.py  ensemble_trainer.py  fraud_model.py  isolation_forest_detector.py  regime_detector.py  slippage_model.py  synthetic_data.py  synthetic_temporal.py  synthetic_validator.py
src/validation/: __init__.py  bounds.py  data_quality.py  drift_detector.py  feature_audit.py  numeric.py  trade_validator.py
src/workers/: celery_app.py  gpu_manager.py  training_tasks.py
(+134 files in other folders)
